Стилизация главной страницы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,17 @@
-// Начните писать стили здесь
+// Global
+
+@import "global/fonts.less";
+@import "global/global.less";
+@import "global/vars.less";
+
+// Blocks
+
+@import "blocks/page-body.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/intro.less";
+@import "blocks/features.less";
+@import "blocks/article.less";
+@import "blocks/reviews.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
