--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,5 @@
 @import "blocks/reviews.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
