--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,3 +17,8 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/checkbox-field.less";
+@import "blocks/form-button.less";
+@import "blocks/form.less";
+@import "blocks/modal.less";
+@import "blocks/text-field.less";
