--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,6 @@
 @import "blocks/form.less";
 @import "blocks/modal.less";
 @import "blocks/text-field.less";
+@import "blocks/button.less";
+@import "blocks/editor.less";
+@import "blocks/photos.less";
